Bug 968555 - Don't create a stacking context for backface-visibility:hidden. r=dbaron